<resources>
    <string name="app_name">Sample</string>
    <string name="thumbnail">thumbnail</string>
    <string name="common_net_error">network error</string>
    <string name="show_courses_by_netbird">show courses by netbird</string>
    <string name="test">test</string>
    <string name="input_github_user_name">input github user name</string>
    <string name="ccolorcat">ccolorcat</string>
    <string name="show_repos">show repos</string>
</resources>
