<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_show_courses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_courses_by_netbird" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_github_user_name"
            android:text="@string/ccolorcat" />

        <Button
            android:id="@+id/btn_show_repos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_repos" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/test" />

</LinearLayout>